finish the phrase module.

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "ashen077 = phraser.pagePhrase('ashen077')"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "charts = ashen077.track_lists('https://www.last.fm/user/ashen077/library?page=3')"
@@ -977,6 +977,70 @@
     "df['Artist'] = df[4].apply(lambda x: x.a.getText())\n",
     "df = df.drop([1,3,4,7], axis=1)\n",
     "df.head(6)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "        Artist Album            Track                        Time\n0  Tove Styrke  Sway       On a Level  Sunday 6 Dec 2020, 11:38am\n1  Tove Styrke  Sway           I Lied  Sunday 6 Dec 2020, 11:34am\n2  Tove Styrke  Sway  Changed My Mind  Sunday 6 Dec 2020, 11:31am\n3  Tove Styrke  Sway         Mistakes  Sunday 6 Dec 2020, 11:28am\n4  Tove Styrke  Sway       On The Low  Sunday 6 Dec 2020, 11:25am\n5  Tove Styrke  Sway      Say My Name  Sunday 6 Dec 2020, 11:21am",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Artist</th>\n      <th>Album</th>\n      <th>Track</th>\n      <th>Time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Tove Styrke</td>\n      <td>Sway</td>\n      <td>On a Level</td>\n      <td>Sunday 6 Dec 2020, 11:38am</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Tove Styrke</td>\n      <td>Sway</td>\n      <td>I Lied</td>\n      <td>Sunday 6 Dec 2020, 11:34am</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Tove Styrke</td>\n      <td>Sway</td>\n      <td>Changed My Mind</td>\n      <td>Sunday 6 Dec 2020, 11:31am</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Tove Styrke</td>\n      <td>Sway</td>\n      <td>Mistakes</td>\n      <td>Sunday 6 Dec 2020, 11:28am</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Tove Styrke</td>\n      <td>Sway</td>\n      <td>On The Low</td>\n      <td>Sunday 6 Dec 2020, 11:25am</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Tove Styrke</td>\n      <td>Sway</td>\n      <td>Say My Name</td>\n      <td>Sunday 6 Dec 2020, 11:21am</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = ashen077.extract_data(charts)\n",
+    "df.head(6)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "df_s1 = df.head(6)\n",
+    "df_s2 = df.tail(6)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    index           Artist                Album               Track  \\\n0       0      Tove Styrke                 Sway          On a Level   \n1       1      Tove Styrke                 Sway              I Lied   \n2       2      Tove Styrke                 Sway     Changed My Mind   \n3       3      Tove Styrke                 Sway            Mistakes   \n4       4      Tove Styrke                 Sway          On The Low   \n5       5      Tove Styrke                 Sway         Say My Name   \n6      44  Sabrina Claudio  No Rain, No Flowers            Creation   \n7      45  Sabrina Claudio  No Rain, No Flowers               Cycle   \n8      46  Sabrina Claudio  No Rain, No Flowers               Naked   \n9      47  Sabrina Claudio  No Rain, No Flowers           Come Here   \n10     48  Sabrina Claudio     Confidently Lost  Tell Me (Acoustic)   \n11     49  Sabrina Claudio     Confidently Lost             I Don't   \n\n                           Time  \n0    Sunday 6 Dec 2020, 11:38am  \n1    Sunday 6 Dec 2020, 11:34am  \n2    Sunday 6 Dec 2020, 11:31am  \n3    Sunday 6 Dec 2020, 11:28am  \n4    Sunday 6 Dec 2020, 11:25am  \n5    Sunday 6 Dec 2020, 11:21am  \n6   Saturday 5 Dec 2020, 7:50pm  \n7   Saturday 5 Dec 2020, 7:47pm  \n8   Saturday 5 Dec 2020, 7:43pm  \n9   Saturday 5 Dec 2020, 7:40pm  \n10  Saturday 5 Dec 2020, 7:36pm  \n11  Saturday 5 Dec 2020, 7:32pm  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>index</th>\n      <th>Artist</th>\n      <th>Album</th>\n      <th>Track</th>\n      <th>Time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>Tove Styrke</td>\n      <td>Sway</td>\n      <td>On a Level</td>\n      <td>Sunday 6 Dec 2020, 11:38am</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Tove Styrke</td>\n      <td>Sway</td>\n      <td>I Lied</td>\n      <td>Sunday 6 Dec 2020, 11:34am</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>Tove Styrke</td>\n      <td>Sway</td>\n      <td>Changed My Mind</td>\n      <td>Sunday 6 Dec 2020, 11:31am</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>Tove Styrke</td>\n      <td>Sway</td>\n      <td>Mistakes</td>\n      <td>Sunday 6 Dec 2020, 11:28am</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>Tove Styrke</td>\n      <td>Sway</td>\n      <td>On The Low</td>\n      <td>Sunday 6 Dec 2020, 11:25am</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5</td>\n      <td>Tove Styrke</td>\n      <td>Sway</td>\n      <td>Say My Name</td>\n      <td>Sunday 6 Dec 2020, 11:21am</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>44</td>\n      <td>Sabrina Claudio</td>\n      <td>No Rain, No Flowers</td>\n      <td>Creation</td>\n      <td>Saturday 5 Dec 2020, 7:50pm</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>45</td>\n      <td>Sabrina Claudio</td>\n      <td>No Rain, No Flowers</td>\n      <td>Cycle</td>\n      <td>Saturday 5 Dec 2020, 7:47pm</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>46</td>\n      <td>Sabrina Claudio</td>\n      <td>No Rain, No Flowers</td>\n      <td>Naked</td>\n      <td>Saturday 5 Dec 2020, 7:43pm</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>47</td>\n      <td>Sabrina Claudio</td>\n      <td>No Rain, No Flowers</td>\n      <td>Come Here</td>\n      <td>Saturday 5 Dec 2020, 7:40pm</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>48</td>\n      <td>Sabrina Claudio</td>\n      <td>Confidently Lost</td>\n      <td>Tell Me (Acoustic)</td>\n      <td>Saturday 5 Dec 2020, 7:36pm</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>49</td>\n      <td>Sabrina Claudio</td>\n      <td>Confidently Lost</td>\n      <td>I Don't</td>\n      <td>Saturday 5 Dec 2020, 7:32pm</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_s1.append(df_s2).reset_index()"
    ],
    "metadata": {
     "collapsed": false,
