--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import phraser\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sys import getsizeof\n",
+    "from bs4 import BeautifulSoup as bs\n",
+    "from urllib import request as req"
    ]
   },
   {
@@ -89,7 +92,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "charts = ashen077.track_lists('https://www.last.fm/user/ashen077/library?page=3')"
+    "charts = ashen077.track_lists('https://www.last.fm/user/ashen077/library?page=1')"
    ],
    "metadata": {
     "collapsed": false,
@@ -1041,6 +1044,73 @@
    ],
    "source": [
     "df_s1.append(df_s2).reset_index()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(bs4.element.ResultSet, 544)"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = ashen077.track_lists('https://www.last.fm/user/ashen077/library?page=1')\n",
+    "type(out), getsizeof(out)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "def track_lists(page):\n",
+    "    html = req.urlopen(page)\n",
+    "    DOM = bs(html, 'lxml')\n",
+    "    trackList = DOM.find_all('tr', class_='chartlist-row')\n",
+    "\n",
+    "    return trackList"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(bs4.element.ResultSet, 544)"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_old = track_lists('https://www.last.fm/user/ashen077/library?page=1')\n",
+    "type(out_old), getsizeof(out_old)"
    ],
    "metadata": {
     "collapsed": false,
