modify get_tags function add progress counter

--- a/test.ipynb
+++ b/test.ipynb
@@ -2349,6 +2349,29 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99999\r"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(100000):\n",
+    "    print(i, end='\\r')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
